--- a/core/web-assets/src/main/assets/js/lib/onms-schedule-editor/templates/schedule-editor.tpl.html
+++ b/core/web-assets/src/main/assets/js/lib/onms-schedule-editor/templates/schedule-editor.tpl.html
@@ -1,3 +1,4 @@
+<span>
 <style type="text/css">
     onms-time-input {
         display: inline-block;
@@ -233,3 +234,4 @@
         <pre class="bg-light px-2 py-2 text-muted">{{options | json}}</pre>
     </div>
 </form>
+</span>
